1.07 - TBA
- added Edit Splits window where you can edit Title and Attempts
- added preferences window
- whether title and/or attempts should be shown are now saved
- how many decimals to show are now saved
- change default window size to be more narrow, as most timers are
- changed hotkeys
- css and jquery are now loaded locally instead of going on the internet
- disabled css options under Window menu because they're broken at the moment
- added "Open HTML Folder" where you can change all the html components (such as the css! see README.md)

1.06 - TBA (the lost version)
* added ”Reload CSS” which will reload the current css, useful when testing and so on
* we now remove the old css before applying the new one (default CSS-option works now)
*** as you can just locally edit the css file with 1.07 this version is moot***

1.05 - mar 03 2014
* external css file (Go crazy!)
* default css is loaded from my server (http://lambdan.se/splits.css)
* 1.05a: removed <center> tags. use css instead.


1.04 - mar 02 2014
* split protection (i.e. so you cant double-hit split key)
* title & attempts display (optional ofcourse)
* known bug: sometimes when opening the app, it will show 0,00000000000000… no idea why…
* *** css is now loaded from my dropbox (internet connection required, every startup)
* *** known bug: timer is not at bottom when no title/attempts are shown
*** = I was hoping to have an user editable, external CSS file for this release, but I need to learn the relative path’s for the HTML that is being used, or how to reload CSS on demand. Hoping to have this fixed in 1.05.
Figuring out how to reload (a new) CSS on demand will also fix the timer positioning bug, as I can have one margin for with title/attempts, and one for without. The best thing though, once I figure it out, is that you will be able to open up the css file and go crazy, change fonts, change colors, change sizes, change margins. everything!